syntax = "proto3";

option csharp_namespace = "GrpcDemo";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply); //unary
  rpc ServerStreamingSayHello(HelloRequest) returns (stream HelloReply); //serverStreaming
  rpc ClientStreamingSayHello(stream HelloRequest) returns (HelloReply); //clientStreaming
  rpc BidirectionalStreamingSayHello(stream HelloRequest) returns (stream HelloReply); //BidirectionalStreaming
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
